--- a/frontend/src/components/body/auth/auth.css
+++ b/frontend/src/components/body/auth/auth.css
@@ -167,7 +167,7 @@ a:hover {
   color: #6567d8;
 }
 
-.btn {
+/* .btn {
   display: block;
   width: 100%;
   height: 50px;
@@ -186,7 +186,7 @@ a:hover {
 }
 .btn:hover {
   background-position: right;
-}
+} */
 
 @media screen and (max-width: 1050px) {
   .container {
